--- a/adjust-rgb/CMakeLists.txt
+++ b/adjust-rgb/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 # set the project name
-project(rgb)
+project(AdjustRGB)
 # get all cpp source files
 file(GLOB SOURCES "src/*.cpp")
 # for library
@@ -10,9 +10,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include-ofx)
 # local headers
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include-local)
 
-add_library(rgb SHARED ${SOURCES})
-SET_TARGET_PROPERTIES(rgb PROPERTIES PREFIX "")
-SET_TARGET_PROPERTIES(rgb PROPERTIES SUFFIX ".ofx")
-target_link_libraries(rgb)
+add_library(AdjustRGB SHARED ${SOURCES})
+SET_TARGET_PROPERTIES(AdjustRGB PROPERTIES PREFIX "")
+SET_TARGET_PROPERTIES(AdjustRGB PROPERTIES SUFFIX ".ofx")
+target_link_libraries(AdjustRGB)
 
-set_property(TARGET rgb PROPERTY CXX_STANDARD 14)
+set_property(TARGET AdjustRGB PROPERTY CXX_STANDARD 14)
